RESOLVED FIXED146769
REGRESSION (r182866): repeated prompts for password on internal Apple website using workers
https://bugs.webkit.org/show_bug.cgi?id=146769
Summary REGRESSION (r182866): repeated prompts for password on internal Apple website...
Darin Adler
Reported 2015-07-08 19:38:17 PDT
REGRESSION (r182866): repeated prompts for password on internal Apple website using workers
Attachments
Patch (3.69 KB, patch)
2015-07-08 19:40 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2015-07-08 19:40:05 PDT
WebKit Commit Bot
Comment 2 2015-07-09 08:28:50 PDT
Comment on attachment 256453 [details] Patch Clearing flags on attachment: 256453 Committed r186592: <http://trac.webkit.org/changeset/186592>
WebKit Commit Bot
Comment 3 2015-07-09 08:28:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.